--- a/packaging/resourced.service
+++ b/packaging/resourced.service
@@ -6,7 +6,7 @@ Wants=tizen-system.target
 [Service]
 Type=simple
 EnvironmentFile=/run/tizen-mobile-env
-ExecStart=/usr/bin/resourced -s 1 -u 60 -c swapon
+ExecStart=/usr/bin/resourced -s 1 -u 60
 Restart=always
 RestartSec=0
 
