memory: add swap support
This patch introduces swap module which is based on memory cgroup
swap extension. This also enables support of flash(eMMC) swap file.
Due to limitation of nand flash write endurance, we limited a
writeback size to 512MB per day.
When we need more memory from requests, the memcg reclaims the memory
from swap cgroup. The resourced can choose the victims by oomadj value.

This patch also includes clean-up of lowmem-process source files
because we don't need them anymore.

Change-Id: I9c09bc5329a5d3e619952c249be3d3712b15c609
Signed-off-by: Chanho Park <chanho61.park@samsung.com>

--- a/packaging/resourced_swapoff.service
+++ b/packaging/resourced_swapoff.service
@@ -10,8 +10,7 @@ Environment="CGROUP_MEMORY_SWAP=/sys/fs/cgroup/memory/swap"
 Environment="SWAPFILE=/opt/usr/swapfile"
 ExecStartPre=-/bin/mkdir -pm 755 $CGROUP_MEMORY_SWAP
 ExecStartPre=-/bin/sh -c "/bin/echo 3 > $CGROUP_MEMORY_SWAP/memory.move_charge_at_immigrate"
-ExecStart=/usr/bin/resourced -s 1 -u 60 -c swapon
-ExecStopPost=-/sbin/swapoff $SWAPFILE
+ExecStart=/usr/bin/resourced -s 1 -u 60
 Restart=always
 RestartSec=0
 
