--- a/src/memory/memory_eng.conf
+++ b/src/memory/memory_eng.conf
@@ -7,6 +7,8 @@ PREDEFINE=amd
 PREDEFINE=launchpad_preloading_preinitializing_daemon
 
 [Memory64]
+# Threshold to start swap
+ThresholdSwap=15		# MB
 
 # Threshold to start reclaim
 ThresholdLow=8			# MB
@@ -21,6 +23,8 @@ ThresholdLeave=8		# MB
 ForegroundRatio=0.6
 
 [Memory256]
+# Threshold to start swap
+ThresholdSwap=40		# MB
 
 # Threshold to start reclaim
 ThresholdLow=20			# MB
@@ -35,6 +39,8 @@ ThresholdLeave=20		# MB
 ForegroundRatio=0.6
 
 [Memory512]
+# Threshold to start swap
+ThresholdSwap=100		# MB
 
 # Threshold to start reclaim
 ThresholdLow=50		# MB
@@ -49,6 +55,8 @@ ThresholdLeave=60		# MB
 ForegroundRatio=0.6
 
 [Memory1024]
+# Threshold to start swap
+ThresholdSwap=300		# MB
 
 # Threshold to start reclaim
 ThresholdLow=200		# MB
@@ -63,6 +71,8 @@ ThresholdLeave=150		# MB
 ForegroundRatio=0.6
 
 [Memory2048]
+# Threshold to start swap
+ThresholdSwap=300		# MB
 
 # Threshold to start reclaim
 ThresholdLow=200		# MB
