service: add memory limit option
- Memory usage of resourced is under 1MB currently.
- If memory leak or other problems occur, resourced
  will be re-launched. The limit of memory usage is 10MB.

Signed-off-by: Taeyoung Kim <ty317.kim@samsung.com>

Change-Id: I75c38b3f93856a292163add7655251332d10dbfb

--- a/packaging/resourced_swapoff.service
+++ b/packaging/resourced_swapoff.service
@@ -13,6 +13,7 @@ ExecStartPre=-/bin/sh -c "/bin/echo 3 > $CGROUP_MEMORY_SWAP/memory.move_charge_a
 ExecStart=/usr/bin/resourced -s 1 -u 60
 Restart=always
 RestartSec=0
+MemoryLimit=10M
 
 [Install]
 WantedBy=multi-user.target
