--- a/packaging/resourced.service
+++ b/packaging/resourced.service
@@ -14,6 +14,7 @@ ExecStart=/usr/bin/resourced -s 1 -u 60 -c swapon
 ExecStopPost=-/sbin/swapoff $SWAPFILE
 Restart=always
 RestartSec=0
+MemoryLimit=10M
 
 [Install]
 WantedBy=multi-user.target
