Enabled build support for 64 bit architecture
Changed CMakeLists and spec file code to enable building for both 32 bit and 64 bit architectures. Changed libdir to LIB_INSTALL_DIR.
Changed INSTALL destination appropriately.
Package successfully builds for the following repos
* ia32 (ia32-wayland, ia32-x11)
* armv7l (arm-wayland, arm-x11)
* aarch64 (arm64-wayland, arm64-x11)
* x86_64 (x86_64-wayland, x86_64-x11)

Change-Id: I6ed707ff0082fafdba03761220a4c3e089fc7dfa
Signed-off-by: Prajwal A N <an.prajwal@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,6 @@ ENDIF()
 SET(PREFIX ${CMAKE_INSTALL_PREFIX})
 
 #following section is needed for pkg-config *.in file
-SET(LIBDIR ${PREFIX}/lib)
 SET(INCLUDEDIR ${PREFIX}/include)
 SET(PC_NAME lib${RESOURCED})
 SET(PC_NAME_DEPRECATED ${fw_name})
@@ -99,8 +98,8 @@ SET(CPU_SOURCE_DIR              ${SOURCE_DIR}/cpu)
 SET(VIP_SOURCE_DIR              ${SOURCE_DIR}/vip-agent)
 SET(TIMER_SOURCE_DIR              ${SOURCE_DIR}/timer-slack)
 
-INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib${RESOURCED}.pc DESTINATION lib/pkgconfig)
-INSTALL(FILES ${CMAKE_SOURCE_DIR}/${fw_name}.pc DESTINATION lib/pkgconfig)
+INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib${RESOURCED}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
+INSTALL(FILES ${CMAKE_SOURCE_DIR}/${fw_name}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/resourced.conf DESTINATION /etc/dbus-1/system.d)
 
 FILE(MAKE_DIRECTORY ${RESOURCED}-cmake)
