--- a/src/network/CMakeLists.txt
+++ b/src/network/CMakeLists.txt
@@ -204,7 +204,7 @@ TARGET_LINK_LIBRARIES(datausagetool
 INSTALL(TARGETS datausagetool
     DESTINATION /usr/bin)
 
-INSTALL(TARGETS ${PROJECT} DESTINATION lib)
+INSTALL(TARGETS ${PROJECT} DESTINATION ${LIB_INSTALL_DIR})
 INSTALL(FILES ${INCLUDE_PUBLIC_DIR}/data_usage.h DESTINATION include/system)
 #### lib-resourced ####
 
@@ -223,7 +223,7 @@ SET_TARGET_PROPERTIES(${NETWORK}
      CLEAN_DIRECT_OUTPUT 1
 )
 
-INSTALL(TARGETS ${NETWORK} DESTINATION lib)
+INSTALL(TARGETS ${NETWORK} DESTINATION ${LIB_INSTALL_DIR})
 INSTALL(FILES ${INCLUDE_PUBLIC_DIR}/rd-network.h DESTINATION include/system)
 
 #### rd-network ####
