--- a/src/powertop-wrapper/CMakeLists.txt
+++ b/src/powertop-wrapper/CMakeLists.txt
@@ -29,5 +29,5 @@ SET_TARGET_PROPERTIES(${POWERTOP-WRAPPER}
      CLEAN_DIRECT_OUTPUT 1
 )
 
-INSTALL(TARGETS ${POWERTOP-WRAPPER} DESTINATION lib)
+INSTALL(TARGETS ${POWERTOP-WRAPPER} DESTINATION ${LIB_INSTALL_DIR})
 INSTALL(FILES ${INCLUDE_PUBLIC_DIR}/powertop-dapi.h DESTINATION include/system)
