--- a/src/proc-stat/CMakeLists.txt
+++ b/src/proc-stat/CMakeLists.txt
@@ -37,7 +37,7 @@ SET_TARGET_PROPERTIES(${PROC-STAT}
 )
 
 
-INSTALL(TARGETS ${PROC-STAT} DESTINATION lib)
+INSTALL(TARGETS ${PROC-STAT} DESTINATION ${LIB_INSTALL_DIR})
 INSTALL(FILES ${INCLUDE_PUBLIC_DIR}/proc_stat.h DESTINATION include/system)
 
 IF(UNIX)
