--- a/src/proc-stat/CMakeLists.txt
+++ b/src/proc-stat/CMakeLists.txt
@@ -1,4 +1,3 @@
-SET(CMAKE_INSTALL_PREFIX /usr)
 SET(PREFIX ${CMAKE_INSTALL_PREFIX})
 
 INCLUDE_DIRECTORIES(${RESOURCED_INCLUDEDIR}
@@ -37,7 +36,7 @@ SET_TARGET_PROPERTIES(${PROC-STAT}
 )
 
 
-INSTALL(TARGETS ${PROC-STAT} DESTINATION lib)
+INSTALL(TARGETS ${PROC-STAT} DESTINATION ${LIB_INSTALL_DIR})
 INSTALL(FILES ${INCLUDE_PUBLIC_DIR}/proc_stat.h DESTINATION include/system)
 
 IF(UNIX)
