Changed package name to resourced
Changed package name from system-resource to resourced and made needed changes in related files.
Also resolved some dependency errors in the spec file related to the package name.

Change-Id: Ie4a675999a05ef8032c1d186fb2a8a5ab58db75a
Signed-off-by: Prajwal A N <an.prajwal@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-SET(fw_name "system-resource")
+SET(fw_name "resourced")
 SET(RESOURCED resourced)
 SET(LIBS libs)
 SET(PROC-STAT proc-stat)
