Changed package name to resourced
Changed package name from system-resource to resourced and made needed changes in related files.
Also resolved some dependency errors in the spec file related to the package name.

Change-Id: Ie4a675999a05ef8032c1d186fb2a8a5ab58db75a
Signed-off-by: Prajwal A N <an.prajwal@samsung.com>

--- a/resourced.pc.in
+++ b/resourced.pc.in
@@ -8,7 +8,7 @@ libdir=@LIB_INSTALL_DIR@
 includedir=@INCLUDEDIR@
 
 Name: @PC_NAME_DEPRECATED@
-Description: @PACKAGE_DESCRIPTION@
+Description: Tizen Resource management Daemon
 Version: @VERSION@
 Requires: @PC_REQUIRED@
 Libs: -L${libdir} @PC_PROVIDED_LIBS@
