tests: added tests package
* added code to test lowmem module in resourced
* added util programs and scripts

Change-Id: Idb8914af71febb32e34082bfd224fc6213fe827e
Signed-off-by: Prajwal A N <an.prajwal@samsung.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -339,3 +339,7 @@ ADD_SUBDIRECTORY(mem-stress)
 ADD_SUBDIRECTORY(${PROC-STAT_SOURCE_DIR})
 ADD_SUBDIRECTORY(${MEMPS_SOURCE_DIR})
 ADD_SUBDIRECTORY(${NETWORK_SOURCE_DIR})
+IF("${TESTS_MODULE}" STREQUAL "ON")
+  ADD_SUBDIRECTORY(${TESTS_SOURCE_DIR})
+ENDIF()
+
