--- a/resourced.conf
+++ b/resourced.conf
@@ -1,10 +1,17 @@
 <!DOCTYPE busconfig PUBLIC "-//freedesktop//DTD D-BUS Bus Configuration 1.0//EN"
  "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
-		<policy context="default">
-        <deny own="org.tizen.resourced"/>
-    </policy>
     <policy user="root">
         <allow own="org.tizen.resourced"/>
+        <allow send_destination="org.tizen.resourced"/>
+    </policy>
+
+    <policy context="default">
+        <deny send_destination="org.tizen.resourced"
+                send_interface="org.tizen.resourced.process"/>
+
+        <check send_destination="org.tizen.resourced"
+                send_interface="org.tizen.resourced.process"
+                privilege="http://tizen.org/privilege/systemmonitor"/>
     </policy>
 </busconfig>
