common: change service type to simple
* notify type is creating waiting before launch
* changing this to simple to remove uneccessary waiting times

Change-Id: I6bf26289d229337c993d3de10fada89307b8e0cc
Signed-off-by: Prajwal A N <an.prajwal@samsung.com>

--- a/src/resourced/resourced.service
+++ b/src/resourced/resourced.service
@@ -3,7 +3,7 @@ Description=Resource management daemon
 After=wm_ready.service
 
 [Service]
-Type=notify
+Type=simple
 EnvironmentFile=/run/tizen-mobile-env
 ExecStart=/usr/bin/resourced
 MemoryLimit=30M
