--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(SRC_MEMORY_TEST ${TESTS_SOURCE_DIR}/memory/resourced_memory_test.c
 SET(SRC_DUMMY_PROCESS ${TESTS_SOURCE_DIR}/util/resourced_dummy_process.c)
 SET(SRC_MEMORY_HOG ${TESTS_SOURCE_DIR}/util/resourced_hogger_memory.c)
 SET(SRC_PROC_STAT_TEST ${TESTS_SOURCE_DIR}/proc-stat/resourced_proc_stat_test.c)
+SET(SRC_DATA_USAGE_TEST ${TESTS_SOURCE_DIR}/network/resourced_data_usage_test.c)
 
 #Linking flags
 INCLUDE(FindPkgConfig)
@@ -34,6 +35,10 @@ INSTALL(TARGETS resourced_memory_test DESTINATION bin)
 ADD_EXECUTABLE(resourced_proc_stat_test ${SRC_PROC_STAT_TEST})
 TARGET_LINK_LIBRARIES(resourced_proc_stat_test ${daemon_pkgs_LDFLAGS} ${PROC-STAT})
 INSTALL(TARGETS resourced_proc_stat_test DESTINATION bin)
+
+ADD_EXECUTABLE(resourced_data_usage_test ${SRC_DATA_USAGE_TEST})
+TARGET_LINK_LIBRARIES(resourced_data_usage_test ${daemon_pkgs_LDFLAGS} ${RESOURCED})
+INSTALL(TARGETS resourced_data_usage_test DESTINATION bin)
 
 ADD_EXECUTABLE(resourced_dummy_process ${SRC_DUMMY_PROCESS})
 INSTALL(TARGETS resourced_dummy_process DESTINATION bin)
