tests: refactored code
* organized code into usable modules

Change-Id: I898bb93a44eb3aa99d770b85773f824168a4e57e
Signed-off-by: Prajwal A N <an.prajwal@samsung.com>

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -10,14 +10,18 @@ INCLUDE_DIRECTORIES(
 )
 
 #Setting sources
-SET(SRC_MEMORY_TEST ${TESTS_SOURCE_DIR}/memory/resourced_memory_test.c
-			${TESTS_SOURCE_DIR}/memory/resourced_memory_test_helper.c
-			${TESTS_SOURCE_DIR}/memory/utils.c)
+SET(SRC_TESTS_COMMON 	${TESTS_SOURCE_DIR}/common/fio.c
+			${TESTS_SOURCE_DIR}/common/procfs.c)
 
-SET(SRC_DUMMY_PROCESS ${TESTS_SOURCE_DIR}/util/resourced_dummy_process.c)
-SET(SRC_MEMORY_HOG ${TESTS_SOURCE_DIR}/util/resourced_hogger_memory.c)
-SET(SRC_PROC_STAT_TEST ${TESTS_SOURCE_DIR}/proc-stat/resourced_proc_stat_test.c)
-SET(SRC_DATA_USAGE_TEST ${TESTS_SOURCE_DIR}/network/resourced_data_usage_test.c)
+			
+SET(SRC_MEMORY_TEST 	${TESTS_SOURCE_DIR}/memory/resourced_memory_test.c
+			${TESTS_SOURCE_DIR}/memory/resourced_memory_test_helper.c
+			${SRC_TESTS_COMMON})
+
+SET(SRC_DUMMY_PROCESS 	${TESTS_SOURCE_DIR}/util/resourced_dummy_process.c)
+SET(SRC_MEMORY_HOG 	${TESTS_SOURCE_DIR}/util/resourced_hogger_memory.c)
+SET(SRC_PROC_STAT_TEST 	${TESTS_SOURCE_DIR}/proc-stat/resourced_proc_stat_test.c)
+SET(SRC_DATA_USAGE_TEST	${TESTS_SOURCE_DIR}/network/resourced_data_usage_test.c)
 
 #Linking flags
 INCLUDE(FindPkgConfig)
