Disable mem-stress.service
- It just occupies memory and does nothing

- But it can be used to make low memory environment, so we don't delete it

Change-Id: I5cd2f8ab8789c0ce525b108dd9cb97b15fb2879f
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -342,7 +342,9 @@ INSTALL(FILES ${PROC-STAT_SOURCE_DIR}/proc.conf
 ADD_EXECUTABLE(hashtest ${UTILS_SOURCE_DIR}/hashtest.c)
 TARGET_LINK_LIBRARIES(hashtest ${RESOURCED_REQUIRE_PKGS_LDFLAGS})
 
-ADD_SUBDIRECTORY(mem-stress)
+IF("${MEM_STRESS}" STREQUAL "ON")
+	ADD_SUBDIRECTORY(mem-stress)
+ENDIF()
 ADD_SUBDIRECTORY(${PROC-STAT_SOURCE_DIR})
 ADD_SUBDIRECTORY(${MEMPS_SOURCE_DIR})
 ADD_SUBDIRECTORY(${NETWORK_SOURCE_DIR})
