Apply Tizen directory path guide
* Changed path

- /opt/usr/etc, /etc/opt -> TZ_SYS_ETC (/opt/etc)
- /opt/storage -> TZ_SYS_STORAGE (/opt/media)
- /opt/usr/data -> TZ_SYS_DATA (/opt/data)
- /opt/usr/dbspace -> TZ_SYS_DB (/opt/dbspace)
- /opt/usr/share -> TZ_SYS_SHARE (/opt/share)

Change-Id: Ibaa6ac20d768e5e6fe52b5f971713f1f77e57cb2
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/block/block.conf.in
+++ b/src/block/block.conf.in
@@ -2,6 +2,8 @@
 # logging { DLOG = 0x1, FILE = 0x2, DB = 0x4}
 # When adding new monitor, "configend=NULL" should be included for distributing other categories.
 [MONITOR1]
+#path will be superceded by macro
+#path=@TZ_USER_CONTENT@
 path=/opt/usr/media
 mode=WRITE
 include=DOWNLOADABLE
