block : change monitoring path
- Existed : /opt/usr/media
- Modified : the root directory of the internal storage.
            This path depends on the current user.

Change-Id: Iadeabf9374f1fbd1d9430527c53524b30714cfb2
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/block/block.conf
+++ b/src/block/block.conf
@@ -1,8 +1,9 @@
+# activate {TRUE, FALSE}
 # mode {DISABLE, ACCESS, READ, WRITE}
 # logging { DLOG = 0x1, FILE = 0x2, DB = 0x4}
 # When adding new monitor, "configend=NULL" should be included for distributing other categories.
-[MONITOR1]
-path=/opt/usr/media
+[MONITOR]
+activate=TRUE
 mode=WRITE
 include=DOWNLOADABLE
 exclude=SLP_debug
