block : prevent overlapped mount
- When resourced checks overlapped mount, it compares path with mtab
- In the mtab, /home/~(link path) is written to /opt/home/~(original path)
- To match path and mounted directory, we use not link path but original path

Change-Id: I2c86b73c2e286b3b426752f408d77c5194b0eb27
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 # libresourced uses it
 PROJECT(resource_d)
 
+ADD_DEFINITIONS("-DRD_SYS_HOME=\"${RD_SYS_HOME}\"")
 ADD_DEFINITIONS("-DRD_SYS_ETC=\"${RD_SYS_ETC}\"")
 ADD_DEFINITIONS("-DRD_SYS_STORAGE=\"${RD_SYS_STORAGE}\"")
 ADD_DEFINITIONS("-DRD_SYS_DATA=\"${RD_SYS_DATA}\"")
