Change path of exclude list file
- /usr/etc -> TZ_SYS_ETC(/opt/etc)

Change-Id: I8850e0b87f08ad66bd33e98227d10a593503bb99
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,7 +54,7 @@ IF("${DEBUG_LOG}" STREQUAL "ON")
   ADD_DEFINITIONS("-DPROC_DEBUG")
 ENDIF()
 
-INSTALL(FILES ${DATA_DIR}/${EXCLUDE_LIST_FILE_NAME} DESTINATION /usr/etc)
+INSTALL(FILES ${DATA_DIR}/${EXCLUDE_LIST_FILE_NAME} DESTINATION ${RD_SYS_ETC})
 #network module
 IF("${NETWORK_MODULE}" STREQUAL "ON")
   SET(SOURCES ${SOURCES}
