cpu : use correct name
Change-Id: I182f65811e3fe8f83218c305cd65136f483dfe72
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/cpu/cpu.conf
+++ b/src/cpu/cpu.conf
@@ -1,7 +1,7 @@
 [CONTROL]
 # predefined process list
 LAZY_PREDEFINE=net-config
-PREDEFINE=indicator
+PREDEFINE=indicator-win
 PREDEFINE=windicator
 BOOTING_PREDEFINE=quickpanel
 WRT_PREDEFINE=wrt_launchpad_daemon
