freezer : move aduitd to the VITAL_WAKEUP group
- auditd receives socket messages from kernel
- If auditd is frozen until VITAL_DISPLAY_WAKEUP event,
 not only auditd can't process but also kernel can't go to the suspend state.
- Therefore, auditd should be included in the VITAL_WAKEUP group.

Change-Id: If0723e703bc72cad17195f2f9208188bd03b492b
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/freezer/freezer.conf
+++ b/src/freezer/freezer.conf
@@ -15,5 +15,5 @@ VITAL_WAKEUP=scim
 VITAL_WAKEUP=windicator
 VITAL_WAKEUP=indicator
 VITAL_DEBUG_WAKEUP=dlog_logger
-VITAL_DISPLAY_WAKEUP=auditd
+VITAL_WAKEUP=auditd
 VITAL_DISPLAY_WAKEUP=data-provider-slave
