freezer : change freezer mode
Change-Id: Ide7e0f37cc189317709a1d43dac161a586213f6d
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/freezer/freezer.conf
+++ b/src/freezer/freezer.conf
@@ -1,6 +1,6 @@
 [SETTING]
 # freezer=default, psmode, suspend
-freezer=suspend
+freezer=default
 # start freezing Nth background application
 freezebackground=1
 # service = enable, disable
