--- a/src/cpu/cpu.conf
+++ b/src/cpu/cpu.conf
@@ -7,6 +7,11 @@ BOOTING_PREDEFINE=quickpanel
 WRT_PREDEFINE=wrt_launchpad_daemon
 BOOTING_PREDEFINE=volume
 BOOTING_PREDEFINE=nvitemd
+# relative cpu share
+# ROOT_CPU_SHARE=100 : fixed
 BACKGROUND_CPU_SHARE=50
-BACKGROUND_CPU_MAX_QUOTA=50
-BACKGROUND_CPU_MIN_QUOTA=10
+DOWNLOAD_CPU_SHARE=50
+QUOTA_CPU_SHARE=25
+# amount of CPU time (max=100)
+DOWNLOAD_CPU_BANDWIDTH=50
+QUOTA_CPU_BANDWIDTH=10
