cpu : tidy up configuration
- Remove unused config keys
- X_CPU_SHARE : absolute -> relative cpu share of root

Change-Id: I9221eed483b1a55c6e703793071b6e241c309d74
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/cpu/cpu.conf
+++ b/src/cpu/cpu.conf
@@ -7,6 +7,7 @@ BOOTING_PREDEFINE=quickpanel
 WRT_PREDEFINE=wrt_launchpad_daemon
 BOOTING_PREDEFINE=volume
 BOOTING_PREDEFINE=nvitemd
+# relative cpu share
+# ROOT_CPU_SHARE=100 : fixed
 BACKGROUND_CPU_SHARE=50
-BACKGROUND_CPU_MAX_QUOTA=50
-BACKGROUND_CPU_MIN_QUOTA=10
+QUOTA_CPU_SHARE=25
