proc-stat : apply LRU state at the favorite apps
Change-Id: I92f83edb57901e8cebf5182b2b6aac51a5ea9ccf
Signed-off-by: Kichan Kwon <k_c.kwon@samsung.com>

--- a/src/proc-stat/proc.conf
+++ b/src/proc-stat/proc.conf
@@ -1,8 +1,4 @@
 [APPUSAGE]
 APPUSAGE=ON
 # predefined favorite lists
-PREDEFINE=com.samsung.phone
-PREDEFINE=com.samsung.contacts
-PREDEFINE=com.samsung.setting
-PREDEFINE=com.samsung.browser
-PREDEFINE=com.samsung.shealth
+PREDEFINE=org.tizen.setting
