Set SmackProcessLabel to System::Privileged
Change-Id: I802fe9becb1aad996f742efc86d2e6e2e84f2696
Signed-off-by: Yunjin Lee <yunjin-.lee@samsung.com>

--- a/src/resourced/resourced.service
+++ b/src/resourced/resourced.service
@@ -4,6 +4,7 @@ After=wm_ready.service
 
 [Service]
 Type=simple
+SmackProcessLabel=System::Privileged
 ExecStart=/usr/bin/resourced
 MemoryLimit=30M
 Restart=on-failure
