--- a/src/heart/dump_heart_data.sh.in
+++ b/src/heart/dump_heart_data.sh.in
@@ -1,5 +1,5 @@
 HEART_DEBUG=$1/heart
 /bin/mkdir -p ${HEART_DEBUG}
-/bin/cp -rf @RD_SYS_DB@/.resourced-logging-leveldb/ ${HEART_DEBUG}
-/bin/cp -rf @RD_SYS_DB@/.resourced-logging.db ${HEART_DEBUG}
+/bin/cp -rf @RD_SYS_DB@/.resourced-heart-leveldb/ ${HEART_DEBUG}
+/bin/cp -rf @RD_SYS_DB@/.resourced-heart-*.db ${HEART_DEBUG}
 /bin/cp -rf @RD_SYS_DATA@/heart/ ${HEART_DEBUG}
